# python_app_deployment

./: .env  .gitignore  README.md  dev.db  flash_card.md  lession.md  main.py  main_lession1.py  main_lession3.py  main_lession4.py  pyproject.toml
